main.css
body {
    display: flex;
    justify-content: center;
    /* flex-direction: column; */
    width:100%;
    margin: 0px;
}

.scrollbar {
    background-color: #F5F5F5;
    float: left;
    height: 300px;
    margin-bottom: 25px;
    margin-left: 22px;
    margin-top: 40px;
    width: 65px;
    overflow-y: scroll;
}

.force-overflow {
    min-height: 450px;
}

#style-1::-webkit-scrollbar {
    width: 6px;
    background-color: #F5F5F5;
} 

#racecar-flex-card-container {
    display: flex;
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    /* width:100%; */
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: center;   
}

/* #racecar-card-container{
    padding: 50px;
    width: auto;
} */

.popup-section-title {
    align-self: center;
    margin: 25px 0px 25px 0px;
    font-weight: bold;
    text-decoration: underline;

}

.card {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width:280px;
    height: 500px;
    /* border: solid 1px black; */
    background-size: cover;
    background-repeat: no-repeat;
}

.invisible-wall {
    width: 100vw;
    height: 100%;
    z-index: 250;
    background-color: white;
    opacity: 0;
    position: absolute;
    top: 0px;
}

.slider-buttons {
    display: none;
}

#popup-container {
    display: none;
    margin-top: 25px;
    flex-direction: column;
    width: 88vw;
    height: 88vh;
    background-color: #F8F8F8;
    z-index: 1000;
    opacity: 0.98;
    overflow-y: scroll;
    padding: 5px;
    position: absolute;
}

#exit-button {
    height: 25px;
    width: 25px;
    align-self: flex-end;
    padding: 20px;
}

.details-button {
    height: auto;
    width: 125px;
    opacity: .8;
    align-self: center;
}


.mod-parts-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.mod-part-sub-container {
    display: flex;
    flex-direction: row;
    margin-bottom: 35px;
}

.reverse-row {
    flex-direction: row-reverse;
}

.icon img {
    height: 75px;
    /* width: auto; */
}

.description {
    height: auto;
    /* width: 250px; */

}

/* .transition {
    transition: width 2s, height 2s, transform 2s;
    transform: rotate(-40deg);
} */

.car-title {
    color: white;
    font-size: 53px;
    align-self: center;
    opacity: .8;
    text-align: center;
    width: 270px;

}

.card-1 {
    position: relative;
    /* background-image: url('assets/Wing-small.jpg'); */
    z-index: 300;
    top: 525px;
    left: -30px;
    /* background-position-x: -80px; */
    
}

.card-2 {
    position: relative;
    /* background-color: lightcoral; */
    /* background-image: url('assets/CamaroGrandville-small.jpg'); */
    background-size: cover;
    z-index: 200;
    top: 0px;
    left: 0px;
    opacity: .6;

}


.card-3 {
    position: relative;
    /* background-image: url('assets/ats-small.jpg'); */
    background-size: cover;
    z-index: 100;
    top: -525px;
    left: 30px;
    opacity: .4;

}

.photo-gallery {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    flex-shrink: 0;
    
}

.photo-gallery-item {    
    width: auto;
    height: 300px;
    padding: 5px;
}

.mod-gallery {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    
}

.mod-gallery-item {    
    width: auto;
    height: 300px;
    padding: 5px;
}


@media only screen and (min-width: 600px) and (max-width: 830px) {
    #racecar-flex-card-container {
        display: flex;
        margin-top: 33%;
        position: unset;
        top: unset;
        left: unset;
        height: unset;
        width: 98%;
        justify-content: unset;
        flex-direction: unset;
        flex-wrap: wrap;
        align-content: unset;
    }

    .card {
        display: flex;
        justify-content: center;
        flex-direction: column;
        width: 600px;
        height: 500px;
        /* border: solid 1px black; */
        background-size: cover;
        background-repeat: no-repeat;
    }

    .card-1 {
        position: relative;
        /* background-image: url(assets/Wing-small.jpg); */
        z-index: 300;
        top: 0px;
        left: 55px;
    }

    .card-2 {
        position: relative;
        /* background-color: lightcoral; */
        /* background-image: url(assets/CamaroGrandville-small.jpg); */
        background-size: cover;
        z-index: 200;
        top: -525px;
        left: 90px;
    }

    .card-3 {
        position: relative;
        /* background-image: url(assets/ats-small.jpg); */
        background-size: cover;
        z-index: 100;
        top: -1050px;
        left: 130px;
    }

    /* .invisible-wall {
        width: 650px;
        height: 530px;
        z-index: 250;
        background-color: white;
        opacity: .6;
        position: absolute;
        top: 203px;
        left: 88px;
    } */

    /* #popup-container {
        display: none;
        margin-top: 5%;
        flex-direction: column;
        width: 700px;
        height: 75vh;
        background-color: #F8F8F8;
        z-index: 1000;
        opacity: 0.98;
        overflow-y: scroll;
        padding: 5px;
        padding: 25px;
        top: 0px;
        position: absolute;
    } */

    .car-title {
        text-align: center;
    }

    
}

@media only screen and (min-width: 831px) {
    body {
        display: flex;
        justify-content: center;
        /* flex-direction: column; */
        width: 100%;
        align-content: center;
        align-self: center;
        height: 100vh;
    }

    #racecar-flex-card-container {
        display: flex;
        margin-top: 80px;
        justify-content: center;
        top: unset;
        left: unset;
        height: unset;
        width: 80vw;
        flex-direction: unset;
        flex-wrap: unset;
        align-self: center;
    }

    /* .card-1 {
        position: relative;
        z-index: 100;
        width: auto;
        height: 525px;
        top: 25px;
        left: 125px;
        opacity: .5;
    } */

    .card-1 {
        position: relative;
        z-index: 100;
        width: auto;
        height: 550px;
        top: -31px;
        left: -7px;
        opacity: .09;
        transform: skewY(13deg);
    }

    .card-2 {
        z-index: 200;
        top: unset;
        width: 550px;
        min-width: 500px;
        height: 550px;
        left: unset;
        opacity: 1;
    }

    /* .card-3 {
        position: relative;
        z-index: 100;
        top: 25px;
        left: -125px;
        width: auto;
        height: 525px;
        opacity: .5;
    } */

    .card-3 {
        position: relative;
        z-index: 100;
        top: -31px;
        left: 7px;
        width: auto;
        height: 550px;
        opacity: .09;
        transform: skewY(-13deg);
    }

    .invisible-wall {
    margin: 0 auto;
    background-color: white;
    opacity: 0;
    z-index: 150;
    margin-top: -10%;
    height: 100%;
    width: 100vw;
    position: absolute;
}

    .slider-buttons {
        display: flex;
        position: absolute;
        flex-direction: row;
        height: auto;
        width: 100%;
        justify-content: space-between;
        align-content: center;
        align-self: center;
    }

    .slider-buttons > button {
        /* margin: 5px; */
        /* height: 30px; */
        /* width: 100px; */
        border: none;
        background-color: unset;
        z-index: 2000;
        
    }

    .button > img {
        height: 150px;
        width: 150px;
    }

    .button:focus {
        outline: none;
      }


    .transition {
        animation: slide-in 0.5s forwards;
        -webkit-animation: slide-in 0.5s forwards;
    }

    #popup-container {
        display: none;
        /* margin-top: 1%; */
        flex-direction: column;
        width: 56vw;
        height: 95vh;
        background-color: #F8F8F8;
        z-index: 1000;
        opacity: 0.98;
        overflow-y: scroll;
        /* border: solid 1px black; */
        /* padding: 5px; */
        /* align-self: center; */
        /* margin: 0 auto; */
        /* justify-self: center; */
        /* left: -6%; */
        position: relative;
    }

    .car-title {
        text-align: center;
    }

    .photo-gallery-item {
        width: 348px;
        height: 242px;
    }

    .mod-gallery-item {
        width: 348px;
        height: 348px;
    }

    .photo-gallery-item:hover {
        opacity: .5;
    }

  
    
    .mod-gallery-item:hover {
        opacity: .5;
    }

    .icon > img {
        height: 125px;
    }

    .car-fact {
        font-size: 22px;
        padding: 25px;
        text-align: center;
    }

    /* .test {} */







}

